# rab

./: AGENTS.md  Cargo.toml  README.md  arch.md  editor-plan.md  long_text.txt  plan.md  rab-session-04b65219.html  sessions.md  todo-plan.md  todo-remaining-plan.md  todo.md  tree-sitter.md  tui.md
.cargo/: config.toml
docs/: steering-followup-gaps.md
extension/: Cargo.toml
extension/src/: hooks.rs  lib.rs  traits.rs  types.rs
patches/rustls-platform-verifier/: Cargo.toml
patches/rustls-platform-verifier/src/: lib.rs
provider/: Cargo.toml
provider/src/: auth.rs  generate_models.rs  lib.rs  models.json  openai_compat.rs  registry.rs
provider/src/oauth/: device_code.rs  github_copilot.rs  mod.rs
src/: adapter.rs  agent.rs  auth.rs  diag.rs  editor.rs  extension.rs  lib.rs  main.rs  paths.rs  provider.rs  session.rs  settings.rs  theme.rs  tls.rs  tui.rs  types.rs
src/agent/: agent_session.rs  branch_summary.rs  compaction.rs  context_files.rs  default_renderer.rs  extension.rs  footer_data_provider.rs  loop.rs  mod.rs  prompt_templates.rs  provider.rs  session.rs  session_repo.rs  session_storage.rs  settings.rs  skills.rs  system_prompt.rs  tool_adapter.rs  types.rs  yo_bridge.rs
src/agent/session/: mod.rs  model.rs  repo.rs  storage.rs
src/agent/ui/: app.rs  chat_editor.rs  footer.rs  help.rs  messages.rs  mod.rs  model_selector.rs  render_utils.rs  theme.rs  working.rs
src/agent/ui/app/: agent.rs  app_impl.rs  auth.rs  chat.rs  command_handlers.rs  events.rs  handlers.rs  helpers.rs  mod.rs  overlays.rs  types.rs
src/agent/ui/components/: assistant_message.rs  bash_execution.rs  confirm_overlay.rs  editor_component.rs  extensions_selector.rs  footer_component.rs  fork_selector.rs  header.rs  info_message.rs  login_dialog.rs  message_components.rs  mod.rs  oauth_selector.rs  scoped_models_selector.rs  session_picker.rs  session_picker_overlay.rs  settings_list.rs  settings_selector.rs  tool_messages.rs  tree_selector.rs  user_message.rs
src/agent/ui/themes/: dark.json  light.json
src/builtin/: bash.rs  commands.rs  edit.rs  export.rs  extension.rs  file_mutation_queue.rs  mod.rs  read.rs  write.rs
src/cli/: args.rs  mod.rs  print_mode.rs  run.rs  session.rs
src/extension/: coerce.rs  hooks.rs  mod.rs  traits.rs  types.rs
src/extensions/: file_search.rs  filesystem.rs  find.rs  grep.rs  ls.rs  mod.rs
src/extensions/mcp/: cache.rs  config.rs  mod.rs  renderer.rs  server.rs  types.rs
src/extensions/tree_sitter/: adapter.rs  files.rs  grammar.rs  mod.rs  renderer.rs  tools.rs  validate.rs
src/extensions/tree_sitter/adapters/: bash.rs  c.rs  clojure.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go.rs  java.rs  kotlin.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs  zig.rs
src/provider/: anthropic.rs  auth.rs  compat.rs  generate_models.rs  mod.rs  models.json  models.rs  openai_compat.rs  registry.rs  update.rs
src/provider/oauth/: github_copilot.rs  mod.rs
src/rattui/: display.rs  editor.rs  mod.rs  render.rs
src/tui/: app.rs  autocomplete.rs  component.rs  container.rs  display.rs  editor.rs  focusable.rs  image.rs  keybindings.rs  keyboard.rs  keys.rs  mod.rs  model_selector.rs  overlay.rs  render.rs  screen.rs  terminal.rs  theme.rs  tui_core.rs  util.rs  visual_truncate.rs  word_nav.rs
src/tui/components/: box.rs  cancellable_loader.rs  diff.rs  dynamic_lines.rs  editor.rs  image.rs  input.rs  lines_component.rs  loader.rs  markdown.rs  mod.rs  rc_ref_cell_component.rs  ref_container.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
src/ui/: app.rs  footer.rs  help.rs  messages.rs  model_selector.rs  theme.rs  working.rs
src/util/: mod.rs  tls.rs
tests/: auth_tests.rs  commands_tests.rs  model_selector_tests.rs  session_tests.rs  settings_tests.rs  tools_bash_tests.rs  tools_edit_tests.rs  tools_read_tests.rs  tools_write_tests.rs  tui_editor_tests.rs  types_tests.rs  yoagent_eval_test.rs
tests/common/: mod.rs
tui/: Cargo.toml
tui/src/: autocomplete.rs  component.rs  container.rs  focusable.rs  fuzzy.rs  keybindings.rs  keys.rs  kill_ring.rs  overlay.rs  screen.rs  terminal_colors.rs  theme.rs  tui_core.rs  undo_stack.rs  visual_truncate.rs  word_nav.rs
tui/src/components/: box.rs  diff.rs  dynamic_lines.rs  editor.rs  image.rs  loader.rs  markdown.rs  mod.rs  rc_ref_cell_component.rs  select_list.rs  spacer.rs  text.rs
util/: Cargo.toml
util/src/: paths.rs
