[package]
name = "rab-agent"
version = "0.1.2"
edition = "2024"
authors = ["Marko Kocic <marko@euptera.com>"]
description = "rab is a lightweight, extensible, Rust-based coding agent."
license = "EPL-2.0"
repository = "https://github.com/markokocic/rab"
readme = "README.md"
keywords = ["agent", "coding", "ai", "broker", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rab"
path = "src/lib.rs"

[[bin]]
name = "rab"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
colored = "3"
genai = "0.6"
directories = "6"
async-stream = "0.3"
crossterm = "0.29"
rustls = "0.23"
webpki-roots = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "gzip", "charset", "http2", "socks", "system-proxy"] }
unicode-segmentation = "1"
unicode-width = "0.2"
libc = "0.2"
diff = "0.1"
pulldown-cmark = "0.13.4"
syntect = { version = "5.3.0", optional = true }
base64 = "0.22.1"
regex = "1.12.4"

[features]
default = ["syntect"]
syntect = ["dep:syntect"]

