[package]
name = "rab-agent"
version = "0.3.0"
edition = "2024"
authors = ["Marko Kocic <marko@euptera.com>"]
description = "rab is a lightweight, extensible, Rust-based coding agent."
license = "EPL-2.0"
repository = "https://github.com/markokocic/rab"
readme = "README.md"
keywords = ["agent", "coding", "ai", "broker", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rab"
path = "src/lib.rs"

[[bin]]
name = "rab"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
colored = "3"
directories = "6"
crossterm = "0.29"
libc = "0.2"
unicode-segmentation = "1"
unicode-width = "0.2"
unicode-normalization = "0.1"
comrak = "0.54"
syntect = { version = "5.3.0", optional = true }
regex = "1.12.4"
base64 = "0.22"
tokio-util = "0.7"
futures = "0.3"
fs2 = "0.4"
reqwest-eventsource = { package = "kameleoon-reqwest-eventsource", version = "0.6" }
tracing = "0.1"
yoagent = "0.13.1"
rustls = "0.23"
webpki-root-certs = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "socks", "form"] }
url = "2.5.8"

[features]
default = ["syntect"]
syntect = ["dep:syntect"]

