[workspace]
members = [".", "tui"]
resolver = "2"

[package]
name = "rab-agent"
version = "0.3.1"
edition = "2024"
authors = ["Marko Kocic <marko@euptera.com>"]
description = "rab is a lightweight, extensible, Rust-based coding agent."
license = "EPL-2.0"
repository = "https://github.com/markokocic/rab"
readme = "README.md"
keywords = ["agent", "coding", "ai", "broker", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rab"
path = "src/lib.rs"

[[bin]]
name = "rab"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
colored = "3"
directories = "6"
crossterm = "0.29"
libc = "0.2"
unicode-normalization = "0.1"
rustls = "0.23"
webpki-root-certs = "1"
syntect = { version = "5.3.0", optional = true }
rab-tui = { path = "tui" }
regex = "1.12.4"
base64 = "0.23"
tokio-util = "0.7"
yoagent = "0.13.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "socks", "form", "blocking"] }
reqwest-eventsource = { package = "kameleoon-reqwest-eventsource", version = "0.6" }
futures = "0.3"
tracing = "0.1"
url = "2.5.8"
fs2 = "0.4"
tree-sitter = { version = "0.26", features = ["wasm"] }

[features]
default = ["syntect"]
syntect = ["dep:syntect", "rab-tui/syntect"]

