[package]
name = "rustls-platform-verifier"
version = "0.7.0"
edition = "2021"
description = "Patched version that uses webpki-root-certs instead of platform-specific verifiers"
license = "MIT OR Apache-2.0"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"] }
webpki-root-certs = "1"
log = "0.4"
